examples/calico/networkpolicy-nginx.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
        #- ipBlock:
        #    cidr: 172.17.0.0/16
        - podSelector:
            matchLabels:
              app: access-nginx
      ports:
        - protocol: TCP
          port: 80
